@@ -393,6 +393,43 @@ FOREACH (_file ${JavaScriptCore_LUT_FILES})
     LIST(APPEND JavaScriptCore_HEADERS ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/${_name}.lut.h)
 ENDFOREACH ()
 
+SET (JavaScriptCore_FORWARDING_HEADERS_DIRECTORIES
+    assembler
+    bytecode
+    collector/handles
+    debugger
+    heap
+    interpreter
+    jit
+    llint
+    parser
+    profiler
+    runtime
+    yarr
+)
+
+SET (JavaScriptCore_FORWARDING_HEADERS_FILES
+    API/APICast.h
+    API/APIShims.h
+    API/JavaScript.h
+    API/JSBase.h
+    API/JSContextRef.h
+    API/JSContextRefPrivate.h
+    API/JSObjectRef.h
+    API/JSObjectRefPrivate.h
+    API/JSStringRef.h
+    API/JSStringRefCF.h
+    API/JSStringRefBSTR.h
+    API/JSValueRef.h
+    API/JavaScriptCore.h
+    API/JSRetainPtr.h
+    API/JSWeakObjectMapRefInternal.h
+    API/JSWeakObjectMapRefPrivate.h
+    API/JSRetainPtr.h
+    API/OpaqueJSString.h
+    API/WebKitAvailability.h
+)
+
 
 # GENERATOR 1-B: particular LUT creator (for 1 file only)
 GENERATE_HASH_LUT(${JAVASCRIPTCORE_DIR}/parser/Keywords.table ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/Lexer.lut.h MAIN_DEPENDENCY)
@@ -430,6 +467,8 @@ ENDIF ()
 
 
 WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS()
+
+WEBKIT_CREATE_FORWARDING_HEADERS(JavaScriptCore DIRECTORIES ${JavaScriptCore_FORWARDING_HEADERS_DIRECTORIES} FILES ${JavaScriptCore_FORWARDING_HEADERS_FILES})
 
 
 ADD_SUBDIRECTORY(shell)
